--- a/anaytics.html
+++ b/anaytics.html
@@ -85,34 +85,34 @@
         <img src="/static/age_distribution.png" alt="Age Distribution" />
       </div>
       <div class="chart-box">
-        <h3>Treatment Duration</h3>
-        <img src="/static/treatment_distribution.png" alt="Treatment Days" />
+        <h3>Treatment Vs Recovery</h3>
+        <img src="/static/treatment_vs_recovery.png" alt="Treatment and Recovery Time" />
       </div>
       <div class="chart-box">
-        <h3>Recovery Time</h3>
-        <img src="/static/recovery_distribution.png" alt="Recovery Days" />
+        <h3>Temperature vs Diagnosis</h3>
+        <img src="/static/temp_diagnosis.png" alt="Temperature and Diagnosis" />
       </div>
       <div class="chart-box">
         <h3>SAT Scores</h3>
-        <img src="/static/sat_distribution.png" alt="SAT Scores" />
+        <img src="/static/sat_age_group.png" alt="SAT Scores" />
       </div>
       <div class="chart-box">
         <h3>Correlation Heatmap</h3>
         <img src="/static/correlation_heatmap.png" alt="Correlation Heatmap" />
       </div>
       <div class="chart-box">
-        <h3>Top 10 Diagnosis Avg Recovery</h3>
-        <img src="/static/top10_diagnosis_recovery.png" alt="Top 10 Diagnosis Recovery" />
+        <h3>Average Recovery Time by Diagnosis (Top 10)</h3>
+        <img src="/static/avg_recovery_top10.png" alt="Top 10 Diagnosis Recovery" />
       </div>
       <div class="chart-box">
-        <h3>Sentiment Analysis</h3>
-        <img src="/static/sentiment_distribution.png" alt="Sentiment" />
+        <h3>Recovery Time by Hospital</h3>
+        <img src="/static/recovery_hospital.png" alt="Recovery Time by Hospital" />
       </div>
     </div>
   </main>
 
   <footer>
-    "Every chart tells a story."
+    "Every Step Forward Is a Step Towards Healthier Tomorrow."
   </footer>
 </body>
 </html>
